--- a/Day_01/index.html
+++ b/Day_01/index.html
@@ -26,7 +26,7 @@
         var dolarNumber = parseFloat(dolar)
         var real = dolarNumber*5.51
         realFixed = real.toFixed(2)
-        alert ('Você tem: ' + ' R$ ' + realFixed)
+        alert ('Você tem: ' + ' U$ ' + realFixed)
     </script>
 </body>
 </html>
