--- a/Day_03/index.html
+++ b/Day_03/index.html
@@ -15,8 +15,8 @@
         <p class="page-subtitle">
             Digite um número de 0 a 10
         </p>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
-            alt="">
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo" alt="">
+        <input type="button" id="start" value="Start" onclick="carregar()">
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
